pulled all info from partition tables. just need to convert from chs to sector address

--- a/task-2/makefile
+++ b/task-2/makefile
@@ -1,8 +1,8 @@
 all: main.o
-	g++ -w -o main main.o -lcrypto -lssl
+	g++ -std=c++11 -w -o main main.o -lcrypto -lssl
 
 main.o: main.cpp
-	g++ -c  -lssl -lcrypto -w main.cpp
+	g++ -std=c++11 -c  -lssl -lcrypto -w main.cpp
 clean:
 	rm -r main.dSYM 
 	rm main.o
