makefile works on ubuntu

--- a/task-1/conversion-utility/makefile
+++ b/task-1/conversion-utility/makefile
@@ -1,6 +1,6 @@
 all: main.o
-	g++ -o address4forensics main.o
+	g++ -std=c++11 -o address4forensics main.o
 main.o: main.cpp
-	g++ -c main.cpp
+	g++ -std=c++11 -c main.cpp
 clean:
 	rm *.o
